[package]
name = "optical"
version = "0.1.0"
authors = ["Anhad Singh <andypythonappdeveloper@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
ureq = { version = "2.0.2", default-features = false, features = ["tls", "json"] }
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
